WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177744
Fix build with MathML disabled
https://bugs.webkit.org/show_bug.cgi?id=177744
Summary
Fix build with MathML disabled
Olivier Blin
Reported
2017-10-02 07:29:48 PDT
These are regressions from
r217549
(StyleResolver) and
r221379
(RenderBlockFlow), which do not guard MathML usage.
Attachments
Patch
(2.49 KB, patch)
2017-10-02 07:38 PDT
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2017-10-02 07:38:34 PDT
Created
attachment 322375
[details]
Patch
Michael Catanzaro
Comment 2
2017-10-02 10:12:24 PDT
Comment on
attachment 322375
[details]
Patch OK, but I think we should remove this build flag.
Olivier Blin
Comment 3
2017-10-02 10:32:54 PDT
(In reply to Michael Catanzaro from
comment #2
)
> Comment on
attachment 322375
[details]
> Patch > > OK, but I think we should remove this build flag.
What about embedded devices that will probably not need MathML?
WebKit Commit Bot
Comment 4
2017-10-02 10:59:40 PDT
Comment on
attachment 322375
[details]
Patch Clearing flags on attachment: 322375 Committed
r222721
: <
http://trac.webkit.org/changeset/222721
>
WebKit Commit Bot
Comment 5
2017-10-02 10:59:41 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2017-10-02 11:00:15 PDT
<
rdar://problem/34770850
>
Michael Catanzaro
Comment 7
2017-10-02 11:36:00 PDT
We usually make features optional for the benefit of embedded devices only if it would entail a significant code size savings (especially when they require extra dependencies). That seems unlikely for MathML, right? How much space is it actually saving you to turn it off? WebKit is moving towards using mainly runtime flags to guard features, and MathML just doesn't seem to fit as something that deserves a build flag anymore.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug