Fix build with MathML disabled https://bugs.webkit.org/show_bug.cgi?id=177744

Patch by Olivier Blin <olivier.blin@softathome.com> on 2017-10-02
Reviewed by Michael Catanzaro.

These are regressions from r217549 (StyleResolver) and r221379 (RenderBlockFlow), which do not guard MathML usage.

* css/StyleResolver.cpp:
(WebCore::hasEffectiveDisplayNoneForDisplayContents):
* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::willCreateColumns const):

Canonical link: https://commits.webkit.org/194004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222721 268f45cc-cd09-0410-ab3c-d52691b4dbfc